src/server/run/snapshots/viguno__server__run__hpo_terms__test__hpo_terms_name_fuzzy_no_genes.snap
---
source: src/server/run/hpo_terms.rs
expression: "&run_query(web_server_data.clone(), \"/hpo/terms?name=Inguinal+hern\").await?"
---
version:
  hpo: 2024-07-01
  viguno: 0.0.0
query:
  term_id: ~
  name: Inguinal hern
  max_results: 100
  genes: false
result:
  - term_id: "HP:0000023"
    name: Inguinal hernia
    definition: Protrusion of the contents of the abdominal cavity through the inguinal canal.
    synonyms: ~
    xrefs:
      - "MEDDRA:10022016"
      - "SNOMEDCT_US:396232000"
      - "UMLS:C0019294"
  - term_id: "HP:0100541"
    name: Femoral hernia
    definition: "A hernia which occurs just below the inguinal ligament, where abdominal contents pass through a naturally occurring weakness called the femoral canal."
    synonyms:
      - Crural hernia
    xrefs:
      - "MEDDRA:10016434"
      - "SNOMEDCT_US:50063009"
      - "UMLS:C0019288"
